--- a/src/polython-challenge-item.html
+++ b/src/polython-challenge-item.html
@@ -54,6 +54,10 @@
           display: inline-flex;
         }
 
+        #goToChallenge {
+          text-decoration: none;
+        }
+
       </style>
     </custom-style>
 
@@ -72,10 +76,11 @@
         <div class="card-actions">
           <div class="buttons-action">
             <flip-clock display-mode="countdown" auto start-from="[[timeLeft(endTime)]]" hide-hours></flip-clock>
-            <paper-button on-tap="_doChallenge" class="polython-challenge-reserve">Do it!</paper-button>
+            <a id="goToChallenge" href="/reto"><paper-button class="polython-challenge-reserve">Do it!</paper-button>
           </div>
         </div>
       </template>
+
     </paper-card>
   </template>
 
@@ -114,10 +119,8 @@
           }
         }
       }
-      _doChallenge() {
-        window.location.href = '/reto';
-      }
-      timeLeft(endTime){
+      
+      timeLeft(endTime) {
         return (endTime - Date.now()) / 60000
       }
     }
