--- a/src/view-user.html
+++ b/src/view-user.html
@@ -50,7 +50,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </firebase-query>
 
 
-    <p>Reto actual <a href="/reto">reto</a></p>
+    <p>Reto actual</p>
     <polython-challenge-item
       title=[[currentChallenge.title]]
       description=[[currentChallenge.description]]
