--- a/src/polython-challenge-item.html
+++ b/src/polython-challenge-item.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../bower_components/paper-card/paper-card.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/flip-clock/flip-clock.html">
 <dom-module id="polython-challenge-item">
   <template>
@@ -15,7 +16,7 @@
         }
 
         paper-card {
-          width: 500px;
+          width: 100%;
         }
 
         .polython-challenge-header {
