--- a/src/your-selfie.html
+++ b/src/your-selfie.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../bower_components/polymer/lib/mixins/gesture-event-listeners.html">
 
 <dom-module id="your-selfie">
     <template>
